--- a/src/heroSection/heroSection.css
+++ b/src/heroSection/heroSection.css
@@ -52,6 +52,7 @@
 /* Optional: Add a responsive design */
 @media (max-width: 768px) {
     .hero-image {
+        width: 100%;
         height: 400px;
         background-size: cover; /* Adjust height for mobile */
     }
