--- a/src/navbar/header.css
+++ b/src/navbar/header.css
@@ -177,6 +177,11 @@ width: 120px;
       width: 100%; /* Make all elements full width */
       margin-bottom: 10px; /* Add space between elements */
     }
+    .logo {
+        width: 100%;
+        height: 50px;
+        background-size: cover;
+    }
     .select{
         min-width: 70px;
     }
