--- a/src/navbar/header.css
+++ b/src/navbar/header.css
@@ -171,17 +171,21 @@ width: 120px;
       flex-direction: row; /* Stack elements vertically on small screens */
       width: 100%; /* Make the search bar full width */
     }
-    
+    .logo {
+        width: 80px;
+        height: 50px;
+        background-size: cover;
+    }
+    .navbar-logo {
+        height: 50px;
+        width: 80px;
+        border: 1.3px solid transparent;
+        padding: 2px; /* Set padding here */
+    }
      .input, .button {
         height: 32px;
       width: 100%; /* Make all elements full width */
       margin-bottom: 10px; /* Add space between elements */
-    }
-   
-    .logo {
-        width: 100%;
-        height: 50px;
-        background-size: cover;
     }
     .select{
         min-width: 70px;
